# godot_database_server

./: Cargo.toml  postgres_tables.sql
src/: application-dev.json  main.rs  structs.rs
src/configs/: configurations.rs
src/models/: error_message.rs  game_structs.rs  message_structs.rs  mod.rs  user.rs  user_objects.rs  user_structs.rs
src/repository/: game_repository.rs  message_repository.rs  mod.rs  user_repository.rs
src/service/: game_service.rs  mod.rs  user_service.rs
