[package]
name = "tokio_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "time", "chrono", "ipnetwork" ] }
chrono = { version = "0.4.31", features = ["serde"]}
config = {version = "0.13.1", features = ["yaml"]}
lazy_static = "1.4.0"
macro_rules_attribute = "0.2.0"
anyhow = {version = "1.0.75", features = ["backtrace"]}

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde"
]